<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="data"
            type="com.running.domain.model.RunningData" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/shape_recycler_view">

        <TextView
            android:id="@+id/record_box_commentTxt"
            style="@style/myHanFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="15dp"
            android:text="@string/record_box_commentTxt"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/record_box_titleTxt"
            style="@style/myHanFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:text="@string/record_box_titleTxt"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/record_box_commentTxt" />

        <TextView
            android:id="@+id/record_box_distenceTxt"
            style="@style/myHanFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:text="@string/record_box_distenceTxt"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/record_box_titleTxt" />

        <LinearLayout
            android:layout_width="409dp"
            android:layout_height="70dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/myHanFont"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/record_box_timeTxt" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="6dp"
                    android:orientation="vertical" />

                <TextView
                    android:text="@{data.time}"
                    style="@style/myHanFont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:orientation="vertical" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/myHanFont"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/record_box_calorieTxt" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="6dp"
                    android:orientation="vertical" />

                <TextView
                    android:text="@{data.calorie}"
                    style="@style/myHanFont"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:orientation="vertical" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text3"
                    style="@style/myHanFont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/record_box_runningTxt"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="6dp"
                    android:orientation="vertical" />

                <TextView
                    android:text="@{data.dayOfWeek}"
                    style="@style/myHanFont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:orientation="vertical" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    style="@style/myHanFont"
                    android:textColor="@color/white"
                    android:id="@+id/text4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/record_box_stepTxt" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="6dp"
                    android:orientation="vertical" />

                <TextView
                    android:text="@{data.step}"
                    style="@style/myHanFont"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12dp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>