<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="data"
            type="com.running.domain.model.RunningData" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00ffffff">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="425dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/shape_dialog"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/title_layout"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:paddingLeft="20dp"
                    style="@style/myHanFont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@{data.dayOfWeek}"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <View
                    android:layout_width="4dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:background="#E33F1F" />

                <TextView
                    style="@style/myHanFont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingRight="20dp"
                    android:text="@string/record_bottomSheet_titleTimeTxt"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/record_layout"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_layout">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/myHanFont"
                            android:gravity="left"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/record_bottomSheet_runningTimeTxt"
                            android:textColor="@color/black"
                            android:textSize="17dp" />

                        <TextView
                            style="@style/myHanFont"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:text="@{data.time}"
                            android:textColor="@color/black"
                            android:textSize="17sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout7"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView7"
                            style="@style/myHanFont"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="left"
                            android:text="@string/record_bottomSheet_runningDistenceTxt"
                            android:textColor="@color/black"
                            android:textSize="17dp" />

                        <TextView
                            style="@style/myHanFont"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:text="@{data.distance}"
                            android:textColor="@color/black"
                            android:textSize="17dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout6"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/myHanFont"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="left"
                            android:text="@string/record_bottomSheet_runningCalorieTxt"
                            android:textColor="@color/black"
                            android:textSize="17dp" />

                        <TextView
                            style="@style/myHanFont"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:text="@{data.calorie}"
                            android:textColor="@color/black"
                            android:textSize="17sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout4"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/myHanFont"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="left"
                            android:text="@string/record_bottomSheet_runningStepTxt"
                            android:textColor="@color/black"
                            android:textSize="17sp" />

                        <TextView
                            style="@style/myHanFont"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:text="@{data.step}"
                            android:textColor="@color/black"
                            android:textSize="17sp" />
                    </LinearLayout>
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/linearLayout10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/record_layout">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/record_bottomSheet_deleteTxt"
                    style="@style/myHanFont"
                    android:layout_width="120dp"
                    android:layout_height="45dp"
                    android:background="@drawable/my_button"
                    android:text="@string/record_bottomSheet_deleteTxt"
                    android:textColor="@color/white"
                    android:textSize="17dp" />

                <LinearLayout
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/record_bottomSheet_backTxt"
                    style="@style/myHanFont"
                    android:layout_width="120dp"
                    android:layout_height="45dp"
                    android:background="@drawable/my_button"
                    android:text="@string/record_bottomSheet_backTxt"
                    android:textColor="@color/white"
                    android:textSize="17dp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>